--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href = "style.css">
     
-    <title>Hello, world!</title>
+    <title>Alexander Spiliotopoulos</title>
     </head>
     <body>
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" style="height:50%">
